create newLayer in app/com.app.Main for slim images